--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,6 @@
     "**/*.txt"
   ],
   "dependencies": {
-    "jquery": "https://github.com/components/jquery.git"
+    "jquery": "http://code.jquery.com/jquery-2.0.0.js"
   }
 }
