--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "dependencies": {
     "express": "3.2.3",
     "express-livereload": "*"
+  },
+  "devDependencies": {
+    "grunt-browserify": "~1.3.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-connect": "~0.6.0"
   }
 }
